# hw10-rag-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  REUSABLE_FROM_PREVIOUS_LESSONS.md  SETUP.md  fly.toml  pyproject.toml  requirements.txt
.claude/: settings.local.json
_overnight/: SUCCESS.txt
app/: __init__.py  auth.py  config.py  deps.py  main.py
app/cache/: __init__.py  semantic.py
app/concurrency/: __init__.py  semaphore.py
app/llm/: __init__.py  circuit_breaker.py  pricing.py  router.py
app/observability/: __init__.py  langfuse_client.py
app/rag/: __init__.py  embedder.py  prompt.py  retriever.py
app/ratelimit/: __init__.py  token_bucket.py
app/routes/: __init__.py  admin.py  chat.py  health.py  usage.py
app/security/: __init__.py  injection.py  logger.py
app/tracking/: __init__.py  models.py  service.py
experiments/: budget_guard.py  common.py  eval_questions.json  exp01_chunking.py  exp02_topk.py  exp03_cache_threshold.py  exp04_models.py  exp05_load.py  exp06_fallback_observed.py  exp07_injection.py  exp08_cost_projection.py  exp09_judge_agreement.py  judge.py  run_all.py
report/: _recover_interpretations.py  generate.py  interpret.py  plots.py
report/output/: HW10_Report.html
report/templates/: report.html.j2
screenshots/: 01_streaming_and_sources.txt  02_cache_miss.txt  02b_cache_miss_v2.txt  03_cache_hit.txt  03b_cache_hit_v2.txt  04_rate_limit.txt  05_fallback_breakdown.txt  06_usage_today.txt
scripts/: download_doc.py  index.py  verify_all.py  verify_anthropic.py  verify_fly.py  verify_langfuse.py  verify_openrouter.py  verify_postgres.py  verify_qdrant.py  verify_redis.py  verify_smoke.py
